--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -8,6 +8,18 @@
     />
     <meta name="theme-color" content="#000000" />
     <title>Marcus Fantham</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: Lato, Verdana, sans-serif;
+      }
+    </style>
+
     <script type="module" src="./index.js"></script>
   </head>
 
